# Operators_Numpy

./: 10.余弦相似度.py  11.sigmoid.py  12.稀疏矩阵的类并实现add和multiply.py  13.Linear.py  14.Dropout.py  15,常见激活函数.py  16.Conv2D前向与反向.py  16.Flatten.py  17.损失函数.py  18.优化器.py  1_1注意力机制.py  1_2多头注意力机制.py  2.numpy广播机制实现L2距离计算.py  3_1 conv2D.py  3_2conv2D.cpp  4.numpy实现bbox_iou.py  5.Numpy实现Focalloss.py  6_1Numpy实现nms.py  6_2Numpy实现softnms.py  7_1Numpy实现BN批归一化.py  7_2pytorch实现BN批归一化.py  8.Conv和BN融合.py  9.Diceloss.py  CMakeLists.txt  Img2col.py  README.md
